--- a/casino_testapp/Views/Gamelist/Fish.cshtml
+++ b/casino_testapp/Views/Gamelist/Fish.cshtml
@@ -79,24 +79,36 @@
                 </li>
             </ul>
         </div>
-        <div class="row col-12 rowalign limitheight" style="overflow-y: auto; justify-content:center;">
-            <div class="col-2 responsiveimg" ng-repeat="x in Gamelist">
-                <div class="card " style="width: fit-content; background:gray">
-                    <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
-                        style="background-color: transparent; border:none; align-self:flex-start">
-                        <span>
-                            <img src="{{x.gameCover}}" class="img-size" ng-model="x">
-                            <label class="form-control-plaintext bttntext">{{x.gameName}}</label>
-                        </span>
-
-                    </button>
-
-                </div>
-            </div>
-        </div>
-        <button type="button" ng-click="viewmore()" style="text-align: center;">View more</button>
     </div><!-- End Bordered Tabs Justified -->
 
+ <div class="row col-12 rowalign limitheight" style="overflow-y: auto; overflow-x:hidden; justify-content:center;">
+    <div class="col-12" style="text-align:-webkit-right">
+     <div class="searchform" ng-show="showsearch">
+        <input type="text" name="query" placeholder="Search" title="Enter search keyword" ng-model="searched">
+        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+      
+    </div>
+    </div>
+    
+        <div class="col-1 responsiveimg" ng-repeat="x in Gamelist | limitTo :limit | filter:searched">
+      
+            <div class="card " style="width: fit-content; background:transparent;" >
+                <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
+                    style="background-color: transparent; border:none; align-self:flex-start">
+                    <img src="{{x.gameCover}}" class="img-size" ng-model="x">
+                    <label class="form-control-plaintext bttntext">{{x.gameName}}</label>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row" style="display: flex; justify-content: center;">
+
+        <button type="button" ng-click="viewmore()"
+            style="height: 50px;width: 50px;text-align: center;background: transparent;color: white;border-radius: 50%;background-color: transparent;border: none;font-size: 45px;">...</button>
+
+
+    </div>
 </div>
 
 @section scripts {
