--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -185,10 +185,10 @@
         @*</section>*@
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer">
-        <div class="copyright">
+    <div class="copyright" style="background:transparent:">
             &copy; Copyright <strong><span>Mj Casino, 2024</span></strong>. All Rights Reserved
         </div>
+    <footer id="footer" class="footer footerbg" >
 
     </footer><!-- End Footer -->
 
