--- a/casino_testapp/Content/assets/css/style.css
+++ b/casino_testapp/Content/assets/css/style.css
@@ -10,6 +10,12 @@
 # General
 --------------------------------------------------------------*/
 
+hr.dashed {
+  margin-top:-20px;
+  background-color:gray;
+  border-top: 10px dashed yellow;
+}
+
 .bi bi-arrow-left {
   height: 150px;
   color: white;
@@ -47,15 +53,19 @@ h6 {
   font-family: "Nunito", sans-serif;
 }
 
-
-
-
-
 .nobg {
   background: transparent;
   background-color: transparent;
 }
 
+.footerbg {
+  background-image: url('../img/Background/GameProviders.png');
+  display: block;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 280px;
+}
 .layoutbg {
   background-image: url('../img/Background/BG2.jpg');
   display: block;
@@ -134,6 +144,10 @@ h6 {
      text-align:start;
      text-decoration-line: underline;
 }
+.img-resize {
+  width: 150px;
+  height: 150px;
+}
 @media (max-width: 1199px) {
   .responsiveimg {
     width: 30%;
@@ -141,6 +155,11 @@ h6 {
   .img-size{
     width: 75px;
     height: 75px;
+  }
+
+  .img-resize{
+    width: 65px;
+    height: 65px;
   }
   .limitheight {
     height: 500px;
@@ -590,7 +609,31 @@ h6 {
 .header .search-form {
   width: 100%;
 }
+@media (max-width: 1199px) {
+  .searchform {
+    width: 40%;
+  }
+}
+.searchform input {
+  border: 0;
+  font-size: 14px;
+  color: #012970;
+  border: 1px solid rgba(1, 41, 112, 0.2);
+  padding: 7px 38px 7px 8px;
+  border-radius: 3px;
+  transition: 0.3s;
+  width: 20%;
+}
+.searchform button {
+  border: 0;
+  padding: 0;
+  margin-left: -30px;
+  background: none;
+}
 
+.searchform button i {
+  color: #012970;
+}
 .header .search-form input {
   border: 0;
   font-size: 14px;
@@ -789,6 +832,7 @@ h6 {
   #main,
   #footer {
     margin-left: 0px;
+    background-color: black;
   }
 }
 
@@ -1404,11 +1448,13 @@ h6 {
   font-size: 14px;
   transition: all 0.3s;
   border-top: 1px solid #cddfff;
+  background-color: black;
 }
 
-.footer .copyright {
+.copyright {
   text-align: center;
-  color: #012970;
+  color: #e0e0e0;
+  background-color: black;
 }
 
 .footer .credits {
