--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -87,14 +87,16 @@
 
                                             <div class="col-12">
                                                 <div class="form-floating">
-                                                    <input type="text" name="username" class="form-control" id="yourUsername" ng-model="username" required>
+                                                    <input type="text" name="username" class="form-control"
+                                                        id="yourUsername" ng-model="username" required>
                                                     <label for="yourUsername">Username</label>
                                                 </div>
                                                 <div class="invalid-feedback">Please enter your username.</div>
                                             </div>
                                             <div class="col-12">
                                                 <div class="form-floating">
-                                                    <input type="password" name="password" class="form-control" id="yourPassword" ng-model="password" required>
+                                                    <input type="password" name="password" class="form-control"
+                                                        id="yourPassword" ng-model="password" required>
                                                     <label for="yourPassword">Password</label>
                                                 </div>
                                                 <div class="invalid-feedback">Please enter your password.</div>
