--- a/casino_testapp/Views/Gamelist/Slot.cshtml
+++ b/casino_testapp/Views/Gamelist/Slot.cshtml
@@ -11,7 +11,6 @@
                 <a class="nav-link w-45" id="home-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Home/Index">
                     <img src="~/Content/assets/img/Dashboard/Home.png" alt="">
-
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
@@ -143,16 +142,18 @@
             </li>
         </ul>
     </div>
-    <div class="row col-12 rowalign limitheight" style="overflow-y: auto; justify-content:center;">
-        <div class="col-1 responsiveimg" ng-repeat="x in Gamelist | limitTo :limit">
-            <div ng-show="opengameUrl">
-                <div id="iframe1">
-
-                </div>
-
-            </div>
-
-            <div class="card " style="width: fit-content; background:transparent;" ng-show="gamelistUrl">
+    <div class="row col-12 rowalign limitheight" style="overflow-y: auto; overflow-x:hidden; justify-content:center;">
+    <div class="col-12" style="text-align:-webkit-right">
+     <div class="searchform" ng-show="showsearch">
+        <input type="text" name="query" placeholder="Search" title="Enter search keyword" ng-model="searched">
+        <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+      
+    </div>
+    </div>
+    
+        <div class="col-1 responsiveimg" ng-repeat="x in Gamelist | limitTo :limit | filter:searched">
+      
+            <div class="card " style="width: fit-content; background:transparent;" >
                 <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
                     style="background-color: transparent; border:none; align-self:flex-start">
                     <img src="{{x.gameCover}}" class="img-size" ng-model="x">
