--- a/casino_testapp/Views/Home/Index.cshtml
+++ b/casino_testapp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 
 <div ng-controller="dashboardCtrlr">
 
-    <img src="~/Content/assets/img/Loader.gif" alt="">
+
     <div class="nav iconbg">
         <ul class="nav-tabs nav-tabs-bordered d-flex navbuttons" id="borderedTabJustified" role="tablist"
             style="border-bottom:none;">
@@ -16,9 +16,7 @@
                 <a class="nav-link w-45 active" id="home-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Home/Index">
                     <img src="~/Content/assets/img/Dashboard/Home_name.png" alt="">
-
                 </a>
-
             </li>
             <li class="nav-item flex-fill" role="presentation">
                 <a class="nav-link w-45" id="Slot-tab" role="tab" aria-controls="home" aria-selected="true"
@@ -27,27 +25,27 @@
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Card-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Card">
+                <a class="nav-link w-45" id="Poker-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Poker">
                     <img src="~/Content/assets/img/Dashboard/Poker.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Crown-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Crown">
-                    <img src="~/Content/assets/img/Dashboard/Crown.png" alt="">
+                <a class="nav-link w-45" id="Live-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Live">
+                    <img src="~/Content/assets/img/Dashboard/Live.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Fish">
+                <a class="nav-link w-45" id="Fish-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Fish">
                     <img src="~/Content/assets/img/Dashboard/Fish.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
-                <a class="nav-link w-45" id="Ball-tab" role="tab" aria-controls="home" aria-selected="true"
-                    href="~/Gamelist/Ball">
-                    <img src="~/Content/assets/img/Dashboard/Ball.png" alt="">
+                <a class="nav-link w-45" id="Sports-tab" role="tab" aria-controls="home"
+                   aria-selected="true" href="~/Gamelist/Sports">
+                    <img src="~/Content/assets/img/Dashboard/Sports.png" alt="">
                 </a>
             </li>
             <li class="nav-item flex-fill" role="presentation">
@@ -60,7 +58,6 @@
                 <a class="nav-link w-45" id="MiniGames-tab" role="tab" aria-controls="home" aria-selected="true"
                     href="~/Gamelist/MiniGames">
                     <img src="~/Content/assets/img/Dashboard/MiniGames.png" alt="">
-
                 </a>
             </li>
         </ul>
@@ -167,18 +164,44 @@
             <div class="tab-content pt-2" id="myTabjustifiedContent"
                 style="background-color: rgba(249, 180, 45, 0.1);, 0.5; color: white; height:300px; overflow-y:auto;">
                 <div class="tab-pane fade active show" id="home-justified" role="tabpanel" aria-labelledby="home-tab">
-                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
-                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
-                    sequi sed ea saepe at unde.
-                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
-                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
-                    sequi sed ea saepe at unde.
-                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
-                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
-                    sequi sed ea saepe at unde.
-                    Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est
-                    unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga
-                    sequi sed ea saepe at unde.
+                    <table class="table" >
+                        <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Amount </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>M********D</td>
+                                <td>200,200.00</td>
+                            </tr>
+                            <tr>
+
+                                <td>M********D</td>
+                                <td>200,200.00</td>
+
+                            </tr>
+                            <tr>
+
+                                <td>M********D</td>
+                                <td>200,200.00</td>
+
+                            </tr>
+                            <tr>
+
+                                <td>M********D</td>
+                                <td>200,200.00</td>
+
+                            </tr>
+                            <tr>
+
+                                <td>M********D</td>
+                                <td>200,200.00</td>
+
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div class="tab-pane fade" id="profile-justified" role="tabpanel" aria-labelledby="profile-tab">
                     Nesciunt totam et. Consequuntur magnam aliquid eos nulla dolor iure eos quia. Accusantium distinctio
@@ -198,26 +221,27 @@
             </div><!-- End Default Tabs -->
         </div>
     </div>
-    <div class=" card btn-bg row" style="margin-bottom: -25px;">
-        <div class="col-xl-12 rowalign">
-            <div class="card-body" style="display:flex; justify-content:space-around;">
+
+    <div class=" card btn-bg" style="margin-bottom: -25px;">
+        <div class="col-xl-12">
+            <div class="card-body" style="text-align:center;">
                 <button type="button" class="btn btn-bg " data-bs-toggle="modal" data-bs-target="#LocalGames">
-                    <img src="~/Content/assets/img/Assortedgames/LocalGames.png" alt="">
+                    <img src="~/Content/assets/img/Assortedgames/LocalGames.png" class="img-resize" alt="">
                 </button>
                 <button type="button" class="btn btn-bg "> <img src="~/Content/assets/img/Assortedgames/MineGames.png"
-                        alt="">
+                        class="img-resize" alt="">
                 </button>
                 <button type="button" class="btn btn-bg "> <img src="~/Content/assets/img/Assortedgames/FirstPerson.png"
-                        alt="">
+                        class="img-resize" alt="">
                 </button>
                 <button type="button" class="btn btn-bg "><img src="~/Content/assets/img/Assortedgames/GameShow.png"
-                        alt="">
+                        class="img-resize" alt="">
                 </button>
                 <button type="button" class="btn btn-bg "> <img src="~/Content/assets/img/Assortedgames/BingoGames.png"
-                        alt="">
+                        class="img-resize" alt="">
                 </button>
                 <button type="button" class="btn btn-bg"> <img src="~/Content/assets/img/Assortedgames/CrashGame.png"
-                        alt="">
+                        class="img-resize" alt="">
                 </button>
             </div>
 
@@ -230,21 +254,15 @@
         </div>
         <div class="card-body">
             <div class="row col-12 ">
-                <div class="col-4 w-45" ng-repeat="x in Gamelist | limitTo:limit | filter: JL">
-
-                    <button class=" form-control" type="button" ng-click="getdata(x)"
-                        style="background-color: transparent; border:none;">
-                        <img src="{{x.gameCover}}" style="width: 30%;" ng-model="x">
-                    </button>
-
-
-
+                
                 </div>
             </div>
-            <button type="button" ng-click="viewmore()" style="text-align: center;">View more</button>
+          
         </div>
 
     </div>
+
+    <hr class="dashed">
 
     <div class="card">
         <div class="card-header">
@@ -253,16 +271,24 @@
         <div class="card-body">
 
         </div>
+        </div>
         <div class="card">
             <div class="card-header">
                 <h3 class="center">LIVE GAMES</h3>
             </div>
-            <div class="card-body">
+            <div class="card-body" ng-repeaat=" x in liveGames | limitTo : limit">
+                <div class="card " style="width: fit-content; background:transparent;" >
+                <button class=" form-control rowbuttonalign" type="button" ng-click="getdata(x)"
+                    style="background-color: transparent; border:none; align-self:flex-start">
+                    <img src="{{x.gameCover}}" class="img-size" ng-model="x">
+                    <label class="form-control-plaintext bttntext">{{x.gameName}}</label>
+                </button>
+            </div>
 
             </div>
         </div>
 
-
+ <hr class="dashed">
         <div class="modal fade" id="LocalGames" tabindex="-1" data-bs-backdrop="false" style="display: none;"
             aria-hidden="true">
             <div class="modal-dialog">
@@ -284,7 +310,7 @@
                 </div>
             </div>
         </div>
-
+ 
 
 
     </div> @*//ng-controller *@
