--- a/casino_testapp/Views/Profile/Account.cshtml
+++ b/casino_testapp/Views/Profile/Account.cshtml
@@ -39,7 +39,7 @@
                         <div class="tab-pane fade show active profile-History" id="profile-History" role="tabpanel">
                             <h5 class="card-title">Transaction History</h5>
                             <p class="small fst-italic">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</p>
-                            <h5 class="card-title">Profile Details</h5>
+                            <h5 class="card-title">Bet History</h5>
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label ">Full Name</div>
                                 <div class="col-lg-9 col-md-8">Kevin Anderson</div>
