--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -39,6 +39,7 @@
 
     <!--Auth CSS-->
     <link href="~/Content/auth.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- =======================================================
