fix request update

--- a/casino_testapp/Views/Dashboard/Index.cshtml
+++ b/casino_testapp/Views/Dashboard/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Dashboard";
-  
+
 }
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -259,8 +259,10 @@
         </div>
 
     </div>
+    <div class="row">
+        <img src="~/Content/assets/img/Line.jpg">
+    </div>
 
-    <hr class="dashed">
 
     <div class="card nobg">
 
@@ -290,7 +292,9 @@
     </div>
 
 
-    <hr class="dashed">
+    <div class="row">
+        <img src="~/Content/assets/img/Line.jpg">
+    </div>
     <div class="modal fade" id="LocalGames" tabindex="-1" data-bs-backdrop="false" style="display: none;"
         aria-hidden="true">
         <div class="modal-dialog">
