--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -10,12 +10,12 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Pages / Login - NiceAdmin Bootstrap Template</title>
+    <title>AutoFill</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="~/Content/assets/img/favicon.png" rel="icon">
+    <link href="~/Content/assets/img/logo.png" rel="icon">
     <link href="~/Content/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
