--- a/casino_testapp/Views/Gamelist/Fish.cshtml
+++ b/casino_testapp/Views/Gamelist/Fish.cshtml
@@ -60,6 +60,62 @@
             </ul>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <span style="display: flex;background:yellow; margin-bottom:5px;">
+                <i class="bi bi-megaphone"></i>
+                <label style="display:flex; width:100%">
+                    <marquee style="text-align: center;">
+                        Thank you for playing PHLBET888. Bet more Win more! &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                        playing PHLBET888. Bet more Win more!
+                        &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                        playing PHLBET888. Bet more Win more!
+                        &nbsp; &nbsp; &nbsp; &nbsp; Thank you for
+                        playing PHLBET888. Bet more Win more!
+                    </marquee>
+                </label>
+            </span>
+
+        </div>
+        <div class="col-sm-12">
+            <div class="card" style="background-color: transparent;">
+                <div class="card-body">
+                    <!-- Slides with controls -->
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="~/Content/assets/img/thumbnail/Games.png" class="d-block w-100" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="~/Content/assets/img/Background/BG3.jpg" class="d-block w-100" alt="...">
+                            </div>
+                            @* <div class="carousel-item">
+                            <img src="~/Content/assets/img/Dashboard/ICONS_BG2.png" class="d-block w-100" alt="...">
+                            </div> *@
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+
+                    </div><!-- End Slides with controls -->
+
+                </div>
+            </div>
+        </div>
+        @*
+        <div class="col-xl-12">
+        <div class="card nobg">
+        <img src="~/Content/assets/img/thumbnail/Games.png" alt="">
+        </div>
+        </div> *@
+    </div>
     <div class="card" style="background: transparent;">
         <div class="card-body" style="background: transparent;">
             <!-- Bordered Tabs Justified -->
