--- a/casino_testapp/Views/Shared/_Layout1.cshtml
+++ b/casino_testapp/Views/Shared/_Layout1.cshtml
@@ -54,11 +54,12 @@
 
 
         <div class="d-flex align-items-center justify-content-between">
+            <i class="bi bi-list toggle-sidebar-btn logo" id="toggle" style="color: beige;"> <span></span></i>
             <a href="~/Dashboard/index" class="logo d-flex align-items-center">
-                <img src="~/Content/assets/img/logo.png" alt="">
+                <img src="~/Content/assets/img/logo1.png" alt="">
                 @* <span class="d-none d-lg-block" style="color:beige;">Mj Casino</span> *@
             </a>
-            <i class="bi bi-list toggle-sidebar-btn" id="toggle" style="color: beige;"> <span></span></i>
+
         </div><!-- End Logo -->
         <div class="search-bar" style="display: hidden;">
 
@@ -108,8 +109,8 @@
 
                             <li>
                                 <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                                    <i class="bi bi-gear"></i>
-                                    <span>Account Settings</span>
+                                    <i class="bi bi-credit-card"></i>
+                                    <span>Deposit</span>
                                 </a>
                             </li>
                             <li>
@@ -118,8 +119,8 @@
 
                             <li>
                                 <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                                    <i class="bi bi-question-circle"></i>
-                                    <span>Need Help?</span>
+                                    <i class="bi bi-wallet2"></i>
+                                    <span>Withdraw</span>
                                 </a>
                             </li>
                             <li>
@@ -237,6 +238,8 @@
     <main id="main" class="main layoutbg">
         @*<section class="section">*@
         <div class="content-wrapper">
+
+
             @RenderBody()
         </div>
         @*</section>*@
