--- a/casino_testapp/Views/Authorization/Registration.cshtml
+++ b/casino_testapp/Views/Authorization/Registration.cshtml
@@ -109,7 +109,7 @@
                                                 </div>
                                                 <div class="col-12">
                                                     <div class="form-floating">
-                                                        <input type="text" name="referral" class="form-control" id="yourReferral" ng-model="referrer">
+                                                        <input type="text" name="referral" class="form-control" id="yourReferral" ng-model="referralCode">
                                                         <label for="referrer">Referral Code</label>
                                                     </div>
                                                 </div>
@@ -134,7 +134,7 @@
                                                 <div class="col-12" ng-hide="loggingIn">
                                                     <button id="authButton" class="btn btn-lg w-100" type="submit"
                                                             ng-click="register();">
-                                                        Login
+                                                        Register
                                                     </button>
                                                 </div>
                                                 <div class="lds-ring" ng-show="loggingIn"><div></div><div></div><div></div><div></div></div>
