--- a/casino_testapp/Views/Authorization/Login.cshtml
+++ b/casino_testapp/Views/Authorization/Login.cshtml
@@ -20,9 +20,9 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+          rel="stylesheet">
+
 
     <!-- Vendor CSS Files -->
     <link href="~/Content/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
                                 <div></div>
                             </div>
 
-                            <div ng-show="!checkCurrentUser">
+                            <div ng-cloak ng-show="!checkCurrentUser">
                                 <div class="d-flex justify-content-center py-4">
                                     <a href="index.html" class="logo d-flex align-items-center w-auto">
                                         <img src="~/Content/assets/img/logo.png" alt="">
