--- a/casino_testapp/Views/Shared/_Layout.cshtml
+++ b/casino_testapp/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
 
                             <li>
                                 <a class="dropdown-item d-flex align-items-center" href="#">
-                                    <i class="bi bi-box-arrow-right"></i>
+                                    <i class="bi bi-box-arrow-right" ng-click="signOut()"></i>
                                     <span>Sign Out</span>
                                 </a>
                             </li>
