--- a/casino_testapp/Content/auth.css
+++ b/casino_testapp/Content/auth.css
@@ -21,12 +21,12 @@
 }
 
 .lds-ring {
-
     margin: auto;
     display: inline-block;
     position: relative;
     width: 50px;
     height: 50px;
+    color: #ffb700
 }
 
     .lds-ring div {
@@ -62,6 +62,11 @@
     100% {
         transform: rotate(360deg);
     }
+}
+
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
 }
 
 
