--- a/casino_testapp/Views/Authorization/Registration.cshtml
+++ b/casino_testapp/Views/Authorization/Registration.cshtml
@@ -66,7 +66,7 @@
 
                                 <div class="lds-ring" ng-show="checkCurrentUser"><div></div><div></div><div></div><div></div></div>
 
-                                <div ng-show="!checkCurrentUser">
+                                <div ng-cloak ng-show="!checkCurrentUser">
                                     <div class="d-flex justify-content-center py-4">
                                         <a href="index.html" class="logo d-flex align-items-center w-auto">
                                             <img src="~/Content/assets/img/logo.png" alt="">
