--- a/casino_testapp/Views/Shared/_Layout1.cshtml
+++ b/casino_testapp/Views/Shared/_Layout1.cshtml
@@ -161,7 +161,7 @@
                             </li>
 
                             <li>
-                                <a class="dropdown-item d-flex align-items-center" href="#">
+                                <a class="dropdown-item d-flex align-items-center" href="" ng-click="signOut()">
                                     <i class="bi bi-box-arrow-right"></i>
                                     <span>Sign Out</span>
                                 </a>
